--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "port": 6060,
             "browserTarget": "music-font-end:build"
           },
           "configurations": {
